--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4986,6 +4986,32 @@ img {
    utilities
    ========================================================================== */
 /* topdoc
+  name: Clearfix
+  family: cfgov-utilities
+  patterns:
+    - name: Utility class
+      markup: |
+        <div class="u-clearfix">
+            <div style="float:left; width:100%; height:60px; background:black;"></div>
+        </h1>
+      codenotes:
+        - .u-clearfix;
+      notes:
+        - "Use this class to clear floats. For example, without .u-clearfix the
+           black box would spill into the markup section."
+        - "More information: http://css-tricks.com/snippets/css/clear-fix/"
+  tags:
+    - cfgov-utilities
+*/
+.u-clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.lt-ie8 .u-clearfix {
+  zoom: 1;
+}
+/* topdoc
   name: Visually hidden
   family: cfgov-utilities
   patterns:
@@ -6953,6 +6979,19 @@ a.category-slug.active {
     margin-right: -15px;
   }
 }
+@media only all and (min-width: 66.25em) {
+  .form-l__float:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  .lt-ie8 .form-l__float {
+    zoom: 1;
+  }
+  .form-l__float .form-l_col {
+    float: left;
+  }
+}
 .form-l_col {
   margin-bottom: 1.875em;
 }
@@ -7016,6 +7055,28 @@ a.category-slug.active {
     margin-right: -0.26em;
   }
   .lt-ie8 .form-l_col-2-3 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 66.25em) {
+  .form-l_col-1 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+  }
+  .ie .form-l_col-1 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .form-l_col-1 {
     display: inline;
     margin-right: 0;
     zoom: 1;
