--- a/static/css/main.less
+++ b/static/css/main.less
@@ -97,6 +97,7 @@ img {
 
 @import (less) "utilities.less";
 @import (less) "layout.less";
+@import (less) "nav-secondary.less";
 @import (less) "media-object.less";
 @import (less) "meta.less";
 @import (less) "misc.less";
