--- a/static/css/nav-secondary.less
+++ b/static/css/nav-secondary.less
@@ -58,7 +58,7 @@
 
     &_link {
         .webfont-regular();
-        display: block;
+        display: inline-block;
         padding: unit(10px / 18px, em);
         border-left: 4px solid transparent;
         font-size: unit(18px / @base-font-size-px, em);
