--- a/static/css/main.less
+++ b/static/css/main.less
@@ -29,7 +29,7 @@
         height: auto;
         margin: 0;
         padding: unit(4px / @base-font-size-px, em);
-        color: @gray-50;
+        color: @gray;
     }
 
     &.chosen-container .chosen-drop {
@@ -39,7 +39,7 @@
     }
 
     &.chosen-container-multi .chosen-choices {
-        border-color: @gray-50;
+        border-color: @gray-80;
         background-color: @white;
         background-image: none !important;
     }
@@ -51,7 +51,7 @@
 
     &.chosen-container-multi .chosen-choices li.search-choice {
         margin-left: 3px;
-        border-color: @gray-50;
+        border-color: @gray-80;
         background-color: @gray-10;
         background-image: none !important;
         font-size: unit(13px / @base-font-size-px, em);
@@ -59,7 +59,7 @@
     }
 
     &.chosen-container-multi .chosen-drop .result-selected {
-        color: @gray-80;
+        color: @gray;
     }
 
     .highlighted {
