--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -1469,7 +1469,7 @@ select[multiple].success {
 */
 
 .padded-container {
-    margin: 0 0 unit(30px / @base-font-size-px, em);
+    margin-bottom: unit(30px / @base-font-size-px, em);
     // Use pixels here, Opera doesn't like 1px represented as an em.
     // Maybe it rounds down or something?
     padding: 1px;
