--- a/_layouts/posts-paginated.html
+++ b/_layouts/posts-paginated.html
@@ -5,7 +5,7 @@
     <article class="post-preview">
         <div class="meta-header">
             <span class="date meta-header_right">
-                {{ post.date | date("%b %d, %Y") }}
+                {{ post.date|date("%b %d, %Y") }}
             </span>
         {% if post.category.0 %}
             <a class="category-slug meta-header_left"
@@ -103,4 +103,4 @@
     </nav>
 {% endif %}
 
-</div> <!-- END #pagination_content -->
+</div>
