--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -304,6 +304,7 @@
 
 .content__bleedbar {
 
+    // Overrides the border between main and sidebar, because bleedbar makes its own.
     .content_main:after {
         content: none;
     }
