--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -3,15 +3,7 @@
     <header>
         {% if post.category.0 %}
         <a href="/blog/?filter_category={{ post.category.0 }}" class="post_slug category-slug">
-        {% if post.category.0|lower == 'announcements &amp; updates' %}
-            <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span>
-        {% elif post.category.0|lower == 'consumer information' %}
-            <span class="category-slug_icon cf-icon cf-icon-information"></span>
-        {% elif post.category.0|lower == 'engagement' %}
-            <span class="category-slug_icon cf-icon cf-icon-dialogue"></span>
-        {% elif post.category.0|lower == 'innovation &amp; data' %}
-            <span class="category-slug_icon cf-icon cf-icon-lightbulb"></span>
-        {% endif %}
+            {{ post_macros.category_icon(post.category.0, 'category-slug_icon')|safe }}
             <span class="u-visually-hidden">Category:</span>
             {{ post.category.0 }}
         {% endif %}
