--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9560,30 +9560,6 @@ a.category-slug.active {
             .summary_header
             .summary_text
             .summary_byline
-    - name: Max-width summary text
-      markup: |
-        <article class="summary">
-            <h1 class="summary_header">
-                Preventing illegal discrimination in auto lending
-            </h1>
-            <p class="summary_text summary_text__max">
-                Every year, millions of American families buy a car –
-                and it will be one of the most significant purchases they make.
-                One key priority for us is protecting consumers from the silent
-                pickpocket of discrimination.
-            </p>
-            <p class="summary_byline">
-                By Patrice Ficklin
-            </p>
-        </article>
-      codenotes:
-        - |
-          Structural cheat sheet:
-          -----------------------
-          .summary_text.summary_text__max
-      notes:
-        - "Optionally set a max-width on .summary_text to keep line lengths
-          readable."
   tags:
     - cfgov-summary
 */
@@ -9702,10 +9678,6 @@ a.focus .summary_header {
   font-weight: normal !important;
 }
 
-.summary_text__max {
-  max-width: 41em;
-}
-
 .summary_byline {
   color: #101820;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
@@ -9735,6 +9707,199 @@ a.focus .summary_header {
 .lt-ie9 .summary_byline strong,
 .lt-ie9 .summary_byline b {
   font-weight: normal !important;
+}
+
+/* topdoc
+  name: Layouts
+  family: cfgov-summary
+  patterns:
+    - name: Two columns at large screen
+      markup: |
+        <article class="summary">
+            <h1 class="summary_header">
+                Preventing illegal discrimination in auto lending
+            </h1>
+            <div class="summary_cols">
+                <div class="summary_col">
+                    <p class="summary_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde hic
+                        praesentium eum eveniet accusamus ad provident neque. Earum numquam
+                        tenetur voluptates adipisci expedita reiciendis libero fuga non quas
+                        voluptatem nihil.
+                    </p>
+                </div>
+                <div class="summary_col">
+                    <p class="summary_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde hic
+                        praesentium eum eveniet accusamus ad provident neque. Earum numquam
+                        tenetur voluptates adipisci expedita reiciendis libero fuga non quas
+                        voluptatem nihil.
+                    </p>
+                </div>
+            </div>
+        </article>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .summary_cols
+            .summary_col
+  tags:
+    - cfgov-summary
+*/
+
+.summary_col + .summary_col {
+  margin-top: 1.25em;
+}
+
+.summary_cols {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.summary_col + .summary_col {
+  margin-top: 0;
+}
+
+.summary_col {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 50%;
+}
+
+.ie .summary_col {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .summary_col {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+/* topdoc
+  name: Modifiers
+  family: cfgov-summary
+  patterns:
+    - name: Large header
+      markup: |
+        <h1 class="summary_header summary_header__large">
+            Preventing illegal discrimination in auto lending
+        </h1>
+      codenotes:
+        - .summary_header__large
+    - name: Dark text
+      markup: |
+        <p class="summary_text summary_text__dark">
+            Every year, millions of American families buy a car –
+            and it will be one of the most significant purchases they make.
+            One key priority for us is protecting consumers from the silent
+            pickpocket of discrimination.
+        </p>
+      codenotes:
+        - .summary_text__dark
+    - name: Max-width text
+      markup: |
+        <p class="summary_text summary_text__max">
+            Every year, millions of American families buy a car –
+            and it will be one of the most significant purchases they make.
+            One key priority for us is protecting consumers from the silent
+            pickpocket of discrimination.
+        </p>
+      codenotes:
+        - .summary_text__max
+      notes:
+        - "Optionally set a max-width on .summary_text to keep line lengths
+          readable."
+  tags:
+    - cfgov-summary
+*/
+
+.summary_header__large {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0.30769231em;
+  font-size: 1.625em;
+  line-height: 1.26923077;
+  margin-bottom: 0.61538462em;
+}
+
+.summary_header__large em,
+.summary_header__large i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .summary_header__large em,
+.lt-ie9 .summary_header__large i {
+  font-style: normal !important;
+}
+
+.summary_header__large strong,
+.summary_header__large b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .summary_header__large strong,
+.lt-ie9 .summary_header__large b {
+  font-weight: normal !important;
+}
+
+.summary_header__large {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0.47058824em;
+  font-size: 2.125em;
+  line-height: 1.29411765;
+  margin-bottom: 0.32352941em;
+}
+
+.summary_header__large em,
+.summary_header__large i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .summary_header__large em,
+.lt-ie9 .summary_header__large i {
+  font-style: normal !important;
+}
+
+.summary_header__large strong,
+.summary_header__large b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .summary_header__large strong,
+.lt-ie9 .summary_header__large b {
+  font-weight: normal !important;
+}
+
+.summary_text__dark {
+  color: #101820;
+}
+
+.summary_text__max {
+  max-width: 41em;
 }
 
 /* topdoc
@@ -9836,6 +10001,64 @@ a.focus .summary_header {
   name: Post previews
   family: cfgov-blog-docs
   patterns:
+    - name: Watchroom
+      markup: |
+        <article class="watchroom summary">
+            <h1 class="summary_header summary_header__large">Watchroom header</h1>
+            <div class="summary_cols">
+                <div class="summary_col">
+                    <p class="summary_text summary_text__dark">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde hic
+                        praesentium eum eveniet accusamus ad provident neque. Earum numquam
+                        tenetur voluptates adipisci expedita reiciendis libero fuga non quas
+                        voluptatem nihil.
+                    </p>
+                </div>
+                <div class="summary_col">
+                    <ul class="list list__spaced list__unstyled">
+                        <li class="list_item">
+                            <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span>
+                            <a class="list_link"
+                               href="#">
+                               Student Debt Domino Effect?
+                           </a>
+                        </li>
+                        <li class="list_item">
+                            <span class="category-slug_icon cf-icon cf-icon-contract"></span>
+                            <a class="list_link"
+                               href="#">
+                               CFPB Takes Action Against RealtySouth for Mortgage Disclosure Violations
+                           </a>
+                        </li>
+                        <li class="list_item">
+                            <span class="category-slug_icon cf-icon cf-icon-double-quote"></span>
+                            <a class="list_link"
+                               href="#">
+                               Student Debt Domino Effect?
+                           </a>
+                        </li>
+                        <li class="list_item">
+                            <span class="category-slug_icon cf-icon cf-icon-microphone"></span>
+                            <a class="list_link"
+                               href="#">
+                               Student Debt Domino Effect?
+                           </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </article>
+      codenotes:
+        - |
+          .watchroom.summary
+            .summary__header.summary_header__large
+            .summary_cols
+              .summary_col
+                .summary_text
+              .summary_col
+                .list.list__spaced.list__unstyled
+                  .list_item
+                    .list_link
     - name: Post preview (no image)
       codenotes:
         - |
@@ -9912,6 +10135,10 @@ a.focus .summary_header {
   tags:
     - cfgov-blog-docs
 */
+
+.watchroom {
+  margin-bottom: 3.75em;
+}
 
 .post-preview + .post-preview {
   margin-top: 3.125em;
